--- a/source/tech/details/d3tips.html
+++ b/source/tech/details/d3tips.html
@@ -71,7 +71,7 @@ div.tooltip table, tr, td {
 var diagram = {};
 if (window.location.hash) {
   var exampleId = window.location.hash.substring(1);
-  d3.json('../../json/' + exampleId + '.json', function(error, tree) {
+  d3.json('../../json/' + exampleId, function(error, tree) {
     if (error) throw error
     diagram = new DmwgDiagram(tree);
     diagram.update();
