--- a/source/tech/details/details.html
+++ b/source/tech/details/details.html
@@ -145,7 +145,7 @@ var json_table_recurse = function(sel) {
 var diagram = {};
 if (window.location.hash) {
   var exampleId = window.location.hash.substring(1);
-  d3.json('../../json/' + exampleId + '.json', function(error, tree) {
+  d3.json('../../json/' + exampleId, function(error, tree) {
     if (error) throw error
     diagram = new DmwgDiagram(tree);
     d3.select("#jsontable").selectAll("table")
