--- a/source/entities/details/details.html
+++ b/source/entities/details/details.html
@@ -106,7 +106,7 @@ table.table {
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-      <h1>ClinGen Data Model Working Group</h1>
+      <h2>ClinGen Data Exchange Model Example</h2>
       <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a data-target="#tabjsontable" aria-controls="tabjsontable" role="tab" data-toggle="tab">Tabular View</a></li>
         <li role="presentation"><a data-target="#tabjsonview" aria-controls="tabjsonview" role="tab" data-toggle="tab">JSON message</a></li>
